--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -1,23 +1,23 @@
 // base color
-$blue:#324157;
-$light-blue:#3A71A8;
-$red:#C03639;
-$pink: #E65D6E;
-$green: #30B08F;
-$tiffany: #4AB7BD;
-$yellow:#FEC171;
-$panGreen: #30B08F;
+$blue: #19E3A3;
+$light-blue: #33C6E8;
+$red: #FF6B6B;
+$pink: #F0748E;
+$green: #1FD49C;
+$tiffany: #38C9B5;
+$yellow: #F7B955;
+$panGreen: #1FD49C;
 
 // sidebar
-$menuText:#bfcbd9;
-$menuActiveText:#409EFF;
-$subMenuActiveText:#f4f4f5; // https://github.com/ElemeFE/element/issues/12951
+$menuText: #8EA2B8;
+$menuActiveText: #19E3A3;
+$subMenuActiveText: #E7EEF8; // https://github.com/ElemeFE/element/issues/12951
 
-$menuBg:#304156;
-$menuHover:#263445;
+$menuBg: #0B1117;
+$menuHover: #101924;
 
-$subMenuBg:#1f2d3d;
-$subMenuHover:#001528;
+$subMenuBg: #0E151D;
+$subMenuHover: #14202B;
 
 $sideBarWidth: 210px;
 
