--- a/frontend/src/styles/sidebar.scss
+++ b/frontend/src/styles/sidebar.scss
@@ -67,29 +67,36 @@
       height: 100%;
       width: 100% !important;
       background-color: $menuBg !important;
+      padding: 8px 0;
     }
 
     .el-menu-item,
     .el-submenu__title {
       color: $menuText !important;
+      font-size: 13px;
+      border-radius: 12px;
+      margin: 4px 10px;
+      width: calc(100% - 20px) !important;
+      transition: background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
     }
 
     .el-menu-item.is-active {
       color: $menuActiveText !important;
-      background-color: rgba(25, 227, 163, 0.08) !important;
-      box-shadow: inset 3px 0 0 $menuActiveText;
+      background-color: rgba(41, 230, 165, 0.14) !important;
+      border: 1px solid rgba(41, 230, 165, 0.35);
+      box-shadow: 0 6px 16px rgba(41, 230, 165, 0.12);
     }
-
     .el-submenu.is-active > .el-submenu__title {
       color: $menuActiveText !important;
-      background-color: rgba(25, 227, 163, 0.06) !important;
+      background-color: rgba(41, 230, 165, 0.08) !important;
     }
 
     // menu hover
     .submenu-title-noDropdown,
     .el-submenu__title {
       &:hover {
-        background-color: $menuHover !important;
+        background-color: rgba(41, 230, 165, 0.08) !important;
+        color: $subMenuActiveText !important;
       }
     }
 
@@ -101,9 +108,11 @@
     & .el-submenu .el-menu-item {
       min-width: $sideBarWidth !important;
       background-color: $subMenuBg !important;
+      border-radius: 10px;
 
       &:hover {
-        background-color: $subMenuHover !important;
+        background-color: rgba(41, 230, 165, 0.08) !important;
+        color: $subMenuActiveText !important;
       }
     }
   }
@@ -217,8 +226,7 @@
   .nest-menu .el-submenu>.el-submenu__title,
   .el-menu-item {
     &:hover {
-      // you can use $subMenuHover
-      background-color: $menuHover !important;
+      background-color: rgba(41, 230, 165, 0.08) !important;
     }
   }
 
