--- a/frontend/src/styles/element-ui.scss
+++ b/frontend/src/styles/element-ui.scss
@@ -399,6 +399,27 @@
   color: #0B1117;
 }
 
+.el-autocomplete-suggestion,
+.symbol-suggest-popper {
+  background: var(--surface-1);
+  border: 1px solid var(--line);
+  box-shadow: var(--shadow-1);
+}
+
+.el-autocomplete-suggestion__wrap {
+  background: var(--surface-1);
+}
+
+.el-autocomplete-suggestion li {
+  color: var(--text-2);
+}
+
+.el-autocomplete-suggestion li:hover,
+.el-autocomplete-suggestion li.highlighted {
+  background: var(--hover-bg);
+  color: var(--text-1);
+}
+
 .el-button--danger:hover,
 .el-button--danger:focus {
   background-color: #FF7C7C;
