增加订单簿和最新成交 样式仍然要修改

--- a/frontend/src/styles/sidebar.scss
+++ b/frontend/src/styles/sidebar.scss
@@ -7,6 +7,10 @@
     position: relative;
   }
 
+  .main-container.kline-mode {
+    margin-left: 0 !important;
+  }
+
   .sidebar-container {
     transition: width 0.28s;
     width: $sideBarWidth !important;
